Finished new create page.

--- a/views/default/create.html
+++ b/views/default/create.html
@@ -12,6 +12,7 @@
 <script>
     var create_job_url = "{{=URL('default', 'create_job', user_signature=True)}}";
     var community_url = "{{=URL('default', 'community')}}";
+    var home_url = "{{=URL('default', 'home')}}";
     
     function isJobModel(event) {
         var charCode = event.which;
@@ -149,8 +150,8 @@
     <div class="container" style="margin-top: 5px; padding-right: 0px; padding-left: 0px;">
         <div>
             <div style="margin-bottom: 0px; text-align: right;">
-                <input class="submitButton" type="button" value="Share" style="display: inline-block;"/>
-                <input v-on:click="submit" class="submitButton" type="button" value="Create" style="display: inline-block;"/>
+                <input id="submit_share_button" class="submitButton" v-on:click="submit_share" type="button" value="Share" style="display: inline-block;"/>
+                <input id ="submit_button" v-on:click="submit(false)" class="submitButton" type="button" value="Create" style="display: inline-block;"/>
             </div>
         </div>
     </div>
